# chess

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  threads.h
.github/workflows/: ci.yml
bench/: CMakeLists.txt
claude_tasks/: assessment.md  task_01.md  task_02.md  task_03.md  task_04.md  task_05.md  task_06.md  train_pipeline_overhaul.md  train_tasks_01.md  v2_release_assessment.md
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StaticAnalysis.cmake
include/havoc/: bitboard.hpp  book.hpp  magics.hpp  material_table.hpp  move_order.hpp  movegen.hpp  parameters.hpp  pawn_table.hpp  position.hpp  search.hpp  squares.hpp  tablebase.hpp  thread_pool.hpp  tt.hpp  types.hpp  uci.hpp  utils.hpp  version.hpp  zobrist.hpp
include/havoc/eval/: evaluator.hpp  hce.hpp
paper/: PLAN.md
scripts/: bake_params.py  pgn_to_epd.py  tune.sh
src/: bitboard.cpp  bitboards.cpp  bitboards.h  bits.h  book.cpp  endgame.h  evaluate.cpp  evaluate.h  haVoc.cpp  hashtable.cpp  info.h  magics.cpp  magics.h  magicsrands.h  main.cpp  material.cpp  material.h  material_table.cpp  move.h  move.hpp  move_order.cpp  movegen.cpp  options.h  order.cpp  order.h  parameter.h  parameters.cpp  pawn_table.cpp  pawns.cpp  pawns.h  pgn.cpp  pgn.h  platform_info.h  position.cpp  position.h  search.cpp  search.h  search.hpp  squares.h  tablebase.cpp  (+9 more)
src/eval/: hce.cpp
tests/: CMakeLists.txt  bench.h  test_eval.cpp  test_perft.cpp  test_position.cpp  test_search.cpp  test_smoke.cpp  test_training_pipeline.py
tools/: datagen.cpp  pgn2epd.cpp  texel_tune.cpp
training/: ARCHITECTURE.md  PIPELINE.md  README.md  config.py  convert_to_hdf5.py  data_mixer.py  data_stats.py  encoding.py  export_onnx.py  hdf5_dataset.py  model.py  prepare_data.py  requirements.txt  synthetic_gen.py  train.py  validate.py
tuning/: Makefile  direntw.h  fit.py  learn.py  main.cpp  material_tune.h  pbil.h  pbil.hpp  pgn.cpp  pgn.h  platform.h  singleton.h  square_tune.h  tuning_manager.cpp  tuning_manager.h
tuning/epd/: all-tests.xlsx  mini-test.txt  tests.txt
tuning/optimize/: optimize.sln  optimize.vcxproj
